Fix page overflow on entering very large numbers

--- a/style.css
+++ b/style.css
@@ -26,12 +26,16 @@ body {
     display: flex;  
     justify-content: flex-end;
     align-items: center;
+    
    
 }
 .current-number-displayed { 
     font-size: 50px;
-    padding-right: 40px;
+    /*padding-right: 40px;*/
     color: white;
+    overflow: hidden;
+    margin-right: 40px;
+    margin-left: 30px;
    
 }
 
